# ProjectSorts

./: .gitignore  CMakeLists.txt  main.cpp
includes/: bubble_sort.hpp  comb_sort.hpp  common.hpp  generate_random.hpp  insertion_sort.hpp  odd_even_sort.hpp  quick_sort.hpp  selection_sort.hpp  shaker_sort.hpp  tests.hpp  timer.cpp  timer.hpp
includes/common/: common.hpp  common.inl
includes/data/: date.hpp
includes/random/: generate_random.hpp
includes/report/: report.hpp  report.inl
includes/sorts/: sorts.hpp
includes/tests/: tests.hpp  tests.inl
includes/timer/: timer.hpp
result/10/: result__win11__test1  result__win11__test10  result__win11__test11  result__win11__test13  result__win11__test2  result__win11__test5  result__win11__test6  result__win11__test7  result__win11__test8  result__win11__test9  result_fixed_insertion_intro__win11__test11
result/100/: result__win11__test1  result__win11__test10  result__win11__test11  result__win11__test13  result__win11__test2  result__win11__test5  result__win11__test6  result__win11__test7  result__win11__test8  result__win11__test9  result_fixed_insertion_intro__win11__test11
result/100_000/: result__win11__test1  result__win11__test10  result__win11__test11  result__win11__test13  result__win11__test2  result__win11__test5  result__win11__test6  result__win11__test7  result__win11__test8  result__win11__test9  result_fixed_insertion_intro__win11__test11
result/100_000_000/: result__win11__test1  result__win11__test10  result__win11__test2  result__win11__test5  result__win11__test6  result__win11__test7  result__win11__test8  result__win11__test9  result_quick_with_partional__win11__test1  result_without_shell_and_selection__win11__test5
result/10_000/: result__win11__test1  result__win11__test10  result__win11__test11  result__win11__test13  result__win11__test2  result__win11__test5  result__win11__test6  result__win11__test7  (+3 more)
srcs/: date.cpp  main.cpp  tests.cpp
(+62 files in other folders)
